--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@
 /client/.env.test.local
 /client/.env.production.local
 
+/client/yarn.lock
 /client/npm-debug.log*
 /client/yarn-debug.log*
 /client/yarn-error.log*
