--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "gh-pages": "^3.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.2.2",
     "uniqid": "^5.4.0",
