--- a/server/DevPortfolio/Properties/launchSettings.json
+++ b/server/DevPortfolio/Properties/launchSettings.json
@@ -36,6 +36,14 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
+    },
+    "Production": {
+      "commandName": "Project",
+      "launchBrowser": false,
+      "applicationUrl": "https://devportfolio-production-0faa.up.railway.app",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Production"
+      }
     }
   }
 }
