--- a/server/DevPortfolio/Properties/launchSettings.json
+++ b/server/DevPortfolio/Properties/launchSettings.json
@@ -40,9 +40,9 @@
     "Production": {
       "commandName": "Project",
       "launchBrowser": false,
-      "applicationUrl": "https://devportfolio-production-0faa.up.railway.app",
+      "applicationUrl": "devportfolio-production-c88a.up.railway.app",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Production"
+        "ASPNETCORE_ENVIRONMENT": "production"
       }
     }
   }
