replicate api implemented for interview grading

--- a/server/DevPortfolio/appsettings.json
+++ b/server/DevPortfolio/appsettings.json
@@ -2,8 +2,28 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    },
+    "Console": {
+      "LogLevel": {
+        "Default": "Information"
+      }
+    },
+    "Debug": {
+      "LogLevel": {
+        "Default": "Information"
+      }
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Replicate": {
+    "ApiToken": "r8_DNd2Cqsj4TccWGWwu8CV1YE1jIT5NCk1sfuF2",
+    "Temperature": 0.5,
+    "MaxTokens": 600,
+    "NucleusSamplingFactor": 0.95,
+    "RepetitionPenalty": 1,
+    "SystemPrompt": "You are an interviewer helping computer science students develop their interviewing skills. You will be given a technical question and an answer to the question. Your task is to grade the answer and provide feedback.\\n\\n**Grading System:**\\n\\n- **Overall Guidelines:**\\n  - Use a numeric scale from 0 to 100.\\n  - Provide constructive feedback along with the grade.\\n  - If an answer lacks depth and elaboration, do not assign more than 60 points.\\n\\n**Evaluation Process:**\\n\\n1. Evaluate the answer based on overall understanding, depth, relevance, and communication skills.\\n2. Assign a grade out of 100.\\n3. Provide constructive feedback alongside the grade.\\n\\nYour response should include the grade and feedback directed to the student.",
+    "InterviewPromptSuffix": "Question: {{question}}.\n\nPlease provide a grade for the following Answer:\nSTART OF STUDENT'S ANSWER\n{{answer}}\nEND OF STUDENT'S ANSWER.\n\n Your response should adhere the following Json Schema:\n\n{\\n  \"$schema\": \"http://json-schema.org/draft-07/schema#\",\\n  \"type\": \"object\",\\n  \"properties\": {\\n    \"grade\": {\\n      \"type\": \"int\",\\n      \"description\": \"The grade achieved\"\\n    },\\n    \"feedback\": {\\n      \"type\": \"string\",\\n      \"description\": \"The feedback of the answer\"\\n    }\\n  },\\n  \"required\": [\"grade\", \"feedback\"]\\n}\n\nProvide in your response only the JSON Object"
+  }
 }
