--- a/server/DevPortfolio/appsettings.json
+++ b/server/DevPortfolio/appsettings.json
@@ -18,12 +18,13 @@
   },
   "AllowedHosts": "*",
   "Replicate": {
-    "ApiToken": "r8_DNd2Cqsj4TccWGWwu8CV1YE1jIT5NCk1sfuF2",
-    "Temperature": 0.5,
-    "MaxTokens": 600,
+    "ApiToken": "${REPLICATE_API_KEY}",
+    "ApiUrl": "https://api.replicate.com/v1",
+    "ModelPath": "models/meta/llama-2-13b-chat/predictions",
+    "Temperature": 0.7,
+    "MaxTokens": 400,
     "NucleusSamplingFactor": 0.95,
-    "RepetitionPenalty": 1,
-    "SystemPrompt": "You are an interviewer helping computer science students develop their interviewing skills. You will be given a technical question and an answer to the question. Your task is to grade the answer and provide feedback.\\n\\n**Grading System:**\\n\\n- **Overall Guidelines:**\\n  - Use a numeric scale from 0 to 100.\\n  - Provide constructive feedback along with the grade.\\n  - If an answer lacks depth and elaboration, do not assign more than 60 points.\\n\\n**Evaluation Process:**\\n\\n1. Evaluate the answer based on overall understanding, depth, relevance, and communication skills.\\n2. Assign a grade out of 100.\\n3. Provide constructive feedback alongside the grade.\\n\\nYour response should include the grade and feedback directed to the student.",
-    "InterviewPromptSuffix": "Question: {{question}}.\n\nPlease provide a grade for the following Answer:\nSTART OF STUDENT'S ANSWER\n{{answer}}\nEND OF STUDENT'S ANSWER.\n\n Your response should adhere the following Json Schema:\n\n{\\n  \"$schema\": \"http://json-schema.org/draft-07/schema#\",\\n  \"type\": \"object\",\\n  \"properties\": {\\n    \"grade\": {\\n      \"type\": \"int\",\\n      \"description\": \"The grade achieved\"\\n    },\\n    \"feedback\": {\\n      \"type\": \"string\",\\n      \"description\": \"The feedback of the answer\"\\n    }\\n  },\\n  \"required\": [\"grade\", \"feedback\"]\\n}\n\nProvide in your response only the JSON Object"
+    "SystemPrompt": "You are an interviewer helping computer science students develop their interviewing skills. You will be given a technical question and an answer to the question. Your task is to grade the answer and provide feedback.\\n\\n**Grading System:**\\n\\n- **Overall Guidelines:**\\n  - Use a numeric scale from 0 to 100.\\n  - Provide constructive feedback along with the grade.\\n  - If an answer lacks depth and elaboration, do not assign more than 60 points.\\n\\n**Evaluation Process:**\\n\\n1. Evaluate the answer based on overall understanding, depth, relevance, and communication skills.\\n2. Assign a grade out of 100.\\n3. Provide constructive feedback alongside the grade.\\n\\n4. Feedback should be written using the second person of grammar (you), as you are interacting directly with the student.\\n\\n5. Refrain from responding the question, limit to only provide feedback to the student's answer.'",
+    "InterviewPromptSuffix": "Question: {{question}}.\n\nPlease provide a grade for the following Answer:\nSTART OF STUDENT'S ANSWER\n{{answer}}\nEND OF STUDENT'S ANSWER.\n\n Your response should adhere the following Json Schema:\n\n{\\n  \"$schema\": \"http://json-schema.org/draft-07/schema#\",\\n  \"type\": \"object\",\\n  \"properties\": {\\n    \"grade\": {\\n      \"type\": \"int\",\\n      \"minimum\": 0,\\n      \"maximum\": 100,\\n      \"description\": \"The grade achieved\"\\n    },\\n    \"feedback\": {\\n      \"type\": \"string\",\\n      \"description\": \"The feedback of the answer\"\\n    }\\n  },\\n  \"required\": [\"grade\", \"feedback\"]\\n}\n\nProvide in your response only a valid JSON string.\nStart your response with a { and end it with a }."
   }
 }
