--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,6 @@
 # Ignore bin and obj directories
 /server/DevPortfolio/obj
 /server/DevPortfolio/bin
+
+# Ignore appSettings
+/server/DevPortfolio/appsettings.Development.json
