--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "code-portfolio",
   "version": "0.1.0",
-  "private": true,
+  "homepage": "https://andres-j-correa.github.io/DevPortfolio",
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
