--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
 #API URLs
-REACT_APP_API_HOST_PREFIX="https://localhost:7091/api"
+REACT_APP_API_HOST_PREFIX="https://devportfolio20240614070249.azurewebsites.net/api"
