--- a/server/DevPortfolio/Properties/launchSettings.json
+++ b/server/DevPortfolio/Properties/launchSettings.json
@@ -1,23 +1,14 @@
-﻿{
-  "$schema": "http://json.schemastore.org/launchsettings.json",
-  "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "http://localhost:18593",
-      "sslPort": 44364
-    }
-  },
+{
   "profiles": {
-    "https": {
+    "debug": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7091",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "dotnetRunMessages": true,
+      "applicationUrl": "https://localhost:7091"
     },
     "IIS Express": {
       "commandName": "IISExpress",
@@ -29,11 +20,21 @@
     },
     "Production": {
       "commandName": "Project",
-      "launchBrowser": false,
-      "applicationUrl": "",
+      "launchBrowser": true,
+      "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "production"
-      }
+        "ASPNETCORE_ENVIRONMENT": "Production"
+      },
+      "dotnetRunMessages": true,
+      "applicationUrl": "https://localhost:7091"
+    }
+  },
+  "iisSettings": {
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
+    "iisExpress": {
+      "applicationUrl": "http://localhost:56373/",
+      "sslPort": 44355
     }
   }
 }
