--- a/.github/workflows/serverDeploy.yml
+++ b/.github/workflows/serverDeploy.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy ASP.Net Core app to Azure Web App - DevPortfolio20240614070249
 
 on:
@@ -28,6 +25,9 @@ jobs:
       - name: dotnet publish
         run: dotnet publish --configuration Release --output ${{env.DOTNET_ROOT}}/myapp server/DevPortfolio
 
+      - name: List published files
+        run: dir ${{env.DOTNET_ROOT}}/myapp
+
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
@@ -49,6 +49,9 @@ jobs:
         with:
           name: .net-app
 
+      - name: List Downloaded files
+        run: dir ${{ github.workspace }}
+
       - name: Login to Azure
         uses: azure/login@v1
         with:
@@ -62,4 +65,4 @@ jobs:
         with:
           app-name: "DevPortfolio20240614070249"
           slot-name: "Production"
-          package: ${{env.DOTNET_ROOT}}/myapp
+          package: ${{ github.workspace }}
