--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,10 @@
     "gh-pages": "^3.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
-    "toastr": "^2.1.4",
+    "react-toastify": "^10.0.5",
     "uniqid": "^5.4.0",
     "web-vitals": "^2.1.0"
   },
